3-ustaw-tlo-elementow-html

--- a/js-playground/index.html
+++ b/js-playground/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Warsztat ustaw tlo</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <p class="first">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit mollitia ab quos molestiae quod aut optio aliquam voluptate ut! Quo unde vero laudantium expedita natus a voluptatum nobis, quibusdam quas!</p>
+    <p class="last">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, vitae.</p>
+    <button id="set-background">Set new color</button>
     <script src="js/script.js"></script>
 </body>
 </html>
