--- a/js-playground2/index.html
+++ b/js-playground2/index.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Formularz</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <form id="form" action="">
+        <label>Imię: <input type="text" name="fname" value="Nela"></label>
+        <br /> 
+        <label>Nazwisko: <input type="text" name="lname" value="Fendi"></label>
+        <br />
+        <input type="submit" value="Submit">
+    </form>
+
     <script src="js/script.js"></script>
 </body>
 </html>
