--- a/js-playground3/index.html
+++ b/js-playground3/index.html
@@ -3,10 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Walidacja formularza zapisu do newslettera</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <form action="" id="newsletter-form">
+
+        <ul id="errors"></ul>
+
+        <label for="name">Imię i nazwisko:</label><br />
+        <input type="text" name="name" id="name" placeholder="Jan Nowak"><br />
+
+        <label for="email">Adres e-mail:</label><br />
+        <input type="email" name="email" id="email" placeholder="nowak@mail.com"><br />
+
+        <input type="checkbox" name="agree-1" id="agree-1">
+        <label for="agree-1">Wyrazam zgodę - 1</label><br />
+
+        <input type="checkbox" name="agree-2" id="agree-2">
+        <label for="agree-2">Wyrazam zgodę - 2</label><br />
+
+        <input type="checkbox" name="all-agree" id="all-agree">
+        <label for="all-agree">Wyrazam wszystkie zgody</label><br />
+
+        <button type="submit" id="sign-up">Zapisz</button>
+    </form>
     <script src="js/script.js"></script>
 </body>
 </html>
