--- a/AJAX&API/pobierz-dane-po-kliknieciu-przycisku/index.html
+++ b/AJAX&API/pobierz-dane-po-kliknieciu-przycisku/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>AJAX - warsztat nr 1</title>
 </head>
 <body>
+    <h1>AJAX - warsztat nr 1</h1>
+    
+    <button id="get-data">Pobierz dane</button>
     <script src="js/script.js"></script>
 </body>
 </html>
