--- a/AJAX&API/pobierz-dane-jQuery/index.html
+++ b/AJAX&API/pobierz-dane-jQuery/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>AJAX - Warsztat nr 2</title>
 </head>
 <body>
+    <h1>AJAX - Warsztat nr 2</h1>
+    <button id="get-data">Pobierz dane</button>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
